--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -8,5 +8,6 @@
 	"apihelp-query+viewprotect-description": "{{doc-apihelp-description|query+example}}",
 	"apihelp-query+example-param-key": "{{doc-apihelp-param|query+example|key}}",
 	"apihelp-query+viewprotect-example-1": "{{doc-apihelp-example|query+example}}",
-	"apihelp-query+viewprotect-example-2": "{{doc-apihelp-example|query+example}}"
+	"apihelp-query+viewprotect-example-2": "{{doc-apihelp-example|query+example}}",
+	"action-viewprotectmanage": "{{doc-action|viewprotectmanage}}"
 }
