Allow super users to manage files
* Clean up messages some
* Make a “no files” display more meaningful
* Actually use the query limit

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -2,12 +2,19 @@
 	"@metadata": {
 		"authors": []
 	},
-	"viewprotect-desc": "{{desc}}",
 	"viewprotect": "Title of Special:ViewProtect.",
+	"viewprotect-desc": "{{desc}}",
 	"viewprotect-intro": "Intro paragraph shown on Special:ViewProtect.",
-	"apihelp-query+viewprotect-description": "{{doc-apihelp-description|query+example}}",
-	"apihelp-query+example-param-key": "{{doc-apihelp-param|query+example|key}}",
-	"apihelp-query+viewprotect-example-1": "{{doc-apihelp-example|query+example}}",
-	"apihelp-query+viewprotect-example-2": "{{doc-apihelp-example|query+example}}",
+	"viewprotect-denied": "",
+
+	"viewprotectfile": "Title of Special:ViewProtectFile",
+	"viewprotectfile-nofiles": "Message to display when there are no recent files that you can change the protection on.",
+	"viewprotectfile-legend": "Header of form",
+	"viewprotectfile-name": "Label for file selection",
+	"viewprotectfile-group": "Label for group selection :",
+	"viewprotectfile-submit": "Label on submit button",
+	"viewprotectfile-success-add": "Message that shows when protection is added",
+	"viewprotectfile-success-remove": "Message that shows when a message is removed",
+
 	"action-viewprotectmanage": "{{doc-action|viewprotectmanage}}"
 }
