--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,14 +1,16 @@
 {
 	"@metadata": {
-		"authors": []
+		"authors": [
+			"MarkAHershberger"
+		]
 	},
-	"viewprotect": "View Protection",
+	"viewprotect": "Check view protection",
 	"viewprotect-desc": "ViewProtect adds the ability to hide pages based on groups.",
-	"viewprotect-color-label": "Today's color:",
-	"viewprotect-color-value": "$1",
 	"viewprotect-intro": "This is the ViewProtect special page.",
 	"viewprotect-denied": "You are not in the '$1' group.",
 
+	"viewprotectfile": "Change view protection for a file",
+	"viewprotectfile-nofiles": "There are no recent files that you can change the protection on.",
 	"viewprotectfile-legend": "Limit access to files",
 	"viewprotectfile-name": "File to restrict:",
 	"viewprotectfile-group": "Restrict $1 to the following group:",
@@ -16,9 +18,5 @@
 	"viewprotectfile-success-add": "$1 has been restricted to the $2 group",
 	"viewprotectfile-success-remove": "$1 is no longer restricted",
 
-	"action-viewprotectmanage": "manage a page's 'read' protection",
-	"apihelp-query+viewprotect-description": "Get information about View Protection.",
-	"apihelp-query+example-param-key": "Reduce the result to only one of the viewprotect properties.",
-	"apihelp-query+viewprotect-example-1": "Get all the information about viewprotect.",
-	"apihelp-query+viewprotect-example-2": "Get only information for the key \"do\""
+	"action-viewprotectmanage": "manage a page's 'read' protection"
 }
