--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -16,7 +16,9 @@
 	"viewprotectfile-success-add": "Message that shows when protection is added",
 	"viewprotectfile-success-remove": "Message that shows when a message is removed",
 
-	"viewprotect-read-indicator": "Indicator showing when page is read-restricted.",
+	"viewprotect-log-page": "Title of log page",
+
+	"viewprotect-read-indicator": "<b>Restricted to: $1</b>",
 
 	"log-name-viewprotect": "Name of log page",
 	"log-show-hide-viewprotect": "Indicator to hide/show view protections",
