--- a/i18n/en.json
+++ b/i18n/en.json
@@ -27,7 +27,7 @@
 	"log-name-viewprotect": "View protection",
 	"log-show-hide-viewprotect": "$1 view protection log",
 	"log-description-viewprotect": "When a page's read protection is changed",
-	"logentry-viewprotect-hide": "$1 {{GENDER:$2|restricted}} $3 to the '$4' group",
-	"logentry-viewprotect-show": "$1 {{GENDER:$2|removed}} the '$4' group restriction from $3",
+	"logentry-viewprotect-read": "$1 {{GENDER:$2|changed}} read permission $3 from the '$4' group to the '$5' group",
+	"logentry-viewprotect-upload": "$1 {{GENDER:$2|changed}} upload permission $3 from the '$4' group to the '$5' group",
 	"action-viewprotectmanage": "manage a page's 'read' protection"
 }
